--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "framer-motion": "^12.24.12",
+    "react": "^18.2.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.70.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.12.0",
     "sweetalert2": "^11.26.17",
     "swiper": "^12.0.3"
